# chainchat_app

./: .coverage  .coveragerc  .gitignore  README.md  coverage-unit.xml  pyproject.toml  pytest.ini
.github/workflows/: chainchat_pipeline.yml  ci-security.yml  code-quality.yml  secret-scan.yml  security-scan.yml  security.yml  vulnerability-scan.yml
chainchat/: chat.py  config.py  main.py
chainchat/static/: index.html
scripts/: run_tests.sh
tests/: README.md  conftest.py
tests/integration/: test_integration.py
tests/unit/: test_api.py  test_chat_service.py
tests/utils/: __init__.py  api_keys.py
