[project]
name = "chainchat_app"
version = "0.1.0"
description = ""
authors = [
    {name = "Oded Masala",email = "odedmasala6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "huggingface-hub[cli] (>=0.33.0,<0.34.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "openai (>=1.90.0,<2.0.0)",
    "pinecone-client (>=6.0.0,<7.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
dotenv = "^0.9.9"

