[project]
name = "chainchat_app"
version = "0.1.0"
description = ""
authors = [
    {name = "Oded Masala",email = "odedmasala6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "openai (>=1.90.0,<2.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-openai (>=0.3.8,<0.4.0)",
    "langchain-community (>=0.3.13,<0.4.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "python-multipart (>=0.0.18,<0.1.0)",
    "pydantic-settings (>=2.7.0,<3.0.0)",
    "pypdf (>=4.0.0,<5.0.0)",
    "PyMuPDF (>=1.23.0,<2.0.0)",
    "sentence-transformers (>=2.2.2,<3.0.0)",
    "h11 (>=0.16.0,<1.0.0)"
]

[tool.poetry]
name = "chainchat_app"
version = "0.1.0"
description = ""
authors = ["Oded Masala <odedmasala6@gmail.com>"]
readme = "README.md"
packages = [{include = "chainchat"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
httpx = "^0.28.0"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.1.0"
fastapi = "^0.115.13"
openai = "^1.90.0"
faiss-cpu = "^1.11.0"
langchain = "^0.3.26"
langchain-openai = "^0.3.8"
langchain-community = "^0.3.13"
uvicorn = "^0.34.3"
python-multipart = "^0.0.18"
pydantic-settings = "^2.7.0"
pypdf = "^4.0.0"
PyMuPDF = "^1.23.0"
sentence-transformers = "^2.2.2"
h11 = "^0.16.0"

